# backend-challenge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: assistanace_request.py  factory.py  main.py  settings.py
app/domain/: assistance_request_command.py  assistance_request_command_handler.py
app/domain/delivery_strategies/: delivery_strategy.py  factory.py  mail_delivery_strategy.py  slack_delivery_strategy.py
app/infrastructure/: factory.py  mail_client.py  settings.py  slack_client.py
app/infrastructure/delivery_strategies/: factory.py  mail_delivery_strategy.py  slack_delivery_strategy.py
config/: config.ini
src/: mail_client.py  main.py
tests/: request_assistance_test.py  slack_client_test.py
tests/domain/: assistance_request_command_test.py
tests/unit/: assistance_request_command_test.py
tests/web/: request_assistance_test.py
web/: main.py
