[project]
name = "backend-challenge"
version = "0.1.0"
description = "Coding challenge. https://github.com/jsenin/backend-challenge"
authors = [
    {name = "Jorge Senin",email = "jorge@senin.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]", "pytest",
]

[tool.setuptools]
py-modules = ['src']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"