[project]
name = "backend-challenge"
version = "0.1.0"
description = "Coding challenge. https://github.com/jsenin/backend-challenge"
authors = [
    {name = "Jorge Senin",email = "jorge@senin.org"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]", "pytest", "requests", "slack_sdk", "httpretty"
]

[tool.setuptools]
py-modules = ['app']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"